# openlock_browser

./: .gitignore  CMakeLists.txt  OPENLOCK_PROJECT_PLAN.md  README.md
.meta/: project-health.json
config/: blocklist.json  default.openlock  sample.seb
scripts/: build.sh  install-deps.sh  verify-lockdown.sh
src/: main.cpp
src/browser/: DevToolsBlocker.cpp  DevToolsBlocker.h  DownloadBlocker.cpp  DownloadBlocker.h  NavigationFilter.cpp  NavigationFilter.h  SecureBrowser.cpp  SecureBrowser.h
src/core/: Config.cpp  Config.h  LockdownEngine.cpp  LockdownEngine.h
src/guard/: CGroupIsolator.cpp  ProcessBlocklist.cpp  ProcessBlocklist.h  ProcessGuard.cpp  ProcessGuard.h
src/input/: ClipboardGuard.cpp  ClipboardGuard.h  InputLockdown.cpp  InputLockdown.h  PrintBlocker.cpp  PrintBlocker.h  ShortcutBlocker.cpp  ShortcutBlocker.h
src/integrity/: DebugDetector.cpp  DebugDetector.h  SelfVerifier.cpp  SelfVerifier.h  SystemIntegrity.cpp  SystemIntegrity.h  VMDetector.cpp  VMDetector.h
src/kiosk/: KioskShell.cpp  KioskShell.h  PlatformKiosk.cpp  PlatformKiosk.h  WaylandKiosk.cpp  X11Kiosk.cpp
src/lms/: BlackboardAdapter.cpp  CanvasAdapter.cpp  LMSAdapter.h  MoodleAdapter.cpp
src/protocol/: BrowserExamKey.cpp  BrowserExamKey.h  ConfigKeyGenerator.cpp  ConfigKeyGenerator.h  SEBConfigParser.cpp  SEBProtocol.cpp  SEBProtocol.h  SEBRequestInterceptor.cpp  SEBRequestInterceptor.h
tests/unit/: test_navigation_filter.cpp  test_process_guard.cpp  test_seb_config.cpp  test_vm_detector.cpp
